--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,22 +11,11 @@
 
   <body>
 
-    <% if current_user %>
-      <!-- current_user will return true if a user is logged in -->
-      <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Home', root_path %> | <%= link_to 'Log Out', logout_path, method: :delete %>
-    <% else %>
-      <!-- not logged in -->
-      <%= link_to 'Home', root_path %> | <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
-    <% end %>
-    <hr>
-  
-    <% if notice %>
-      <%= notice %>
-	  <% end %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
-	  <% if alert %>
-     <%= alert %>
-    <% end %>
+
+
 
     <%= yield %>
   </body>
