--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,6 @@
+<h2><%= link_to "Create a new event", new_user_event_path %> </h2>
+<hr>
+
 <h1>Here are all the current events:</h1>
 
 <% @events.each do |event| %>
