--- a/app/views/user_events/show.html.erb
+++ b/app/views/user_events/show.html.erb
@@ -7,6 +7,6 @@
 <p>Created by <%=@user_event.user.username %> </p>
 
 <%= link_to "Delete", @userevent, method: :delete, data: { confirm: "Really?" } %>
-
+<%= link_to "Edit", edit_user_event_path %>
 
 <p>Go back to <%= link_to "list of events", events_path %></p>
