added authentication to user_eventscont, fixed bug in _form

--- a/app/views/user_events/_form.html.erb
+++ b/app/views/user_events/_form.html.erb
@@ -13,8 +13,9 @@
 <% end %>
 
 
-
-<p> Created by <%= current_user.username %>. </p>
+<% if user_signed_in? %>
+  <p> Created by <%= current_user.username %>. </p>
+<% end %>
 
 
 <%= form_for (@user_event) do |f| %>
