--- a/app/views/user_events/index.html.erb
+++ b/app/views/user_events/index.html.erb
@@ -1,11 +1,17 @@
-<h2><%= link_to "Create a new event", new_user_event_path %> </h2>
+<%# Code left for demonstration purposes. %>
+<%# Not sure which one should be better to use %>
+<%# This change has been done after submiting porftolio project and before demonstration. %>
 
-<hr>
+
+
+ <!-- <h2><%#= link_to "Create a new event", new_user_event_path %> </h2> %> -->
+
+<!-- <hr>
 
 <h1>Here are all the current events:</h1>
 
-<% @events.each do |user_event| %>
+<%# @events.each do |user_event| %>
 
-  <h1><%= link_to user_event.eventname, user_event_path(user_event) %> @ <%= user_event.location %>,</h1>
+  <h1><%#= link_to user_event.eventname, user_event_path(user_event) %> @ <%#= user_event.location %>,</h1>
 
-<% end %>
+<%# end %> -->
