--- a/app/views/user_events/show.html.erb
+++ b/app/views/user_events/show.html.erb
@@ -4,15 +4,15 @@
 
 
 
- <!-- <h1>Showing: <%# @user_event.event.eventname %> </h1> -->
-<!-- <h1>Location: <%# @user_event.event.location %></h1> -->
+  <h1>Showing: <%= @user_event.event.eventname %> </h1>
+ <h1>Location: <%= @user_event.event.location %></h1>
 
-<!-- <p> Foodname:<%# @user_event.foodname %></p> -->
-<!-- <p>Foodtype:<%# @user_event.foodtype %></p> -->
-<!-- <p>Fuel:<%# @user_event.fuel %> </p> -->
-<!-- <p>Created by <%#@user_event.user.username %> </p> -->
+ <p> Foodname:<%= @user_event.foodname %></p>
+ <p>Foodtype:<%= @user_event.foodtype %></p>
+ <p>Fuel:<%= @user_event.fuel %> </p>
+ <p>Created by <%=@user_event.user.username %> </p>
 
-<%# <%= link_to "Delete", @userevent, method: :delete, data: { confirm: "Really?" } %>
-<%# <%= link_to "Edit", edit_user_event_path %>
+ <%= link_to "Delete", @userevent, method: :delete, data: { confirm: "Really?" } %>
+<%= link_to "Edit", edit_user_event_path %>
 
-<!-- <p>Go back to <%# link_to "list of events", events_path %></p> -->
+<p>Go back to <%= link_to "list of events", events_path %></p> 
