--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= link_to "Create a new event", new_user_event_path %> </h2>
+<h2><%= link_to "Create a new event", new_event_path %> </h2>
 
 <hr>
 
