refactor process done

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
   <p> Fuel: <%= userevent.fuel %>. </p>
   <p>Created by <%= userevent.user.username %>. </p>
 
-  <%= link_to "Delete", userevent, method: :delete, data: { confirm: "Really?" } %>
+  <%= link_to "Delete", @event, method: :delete, data: { confirm: "Really?" } %>
   <%= link_to "Edit", edit_event_path %>
 <% end %>
 <p>Go back to <%= link_to "list of events", events_path %></p>
