added display in event index to show events made by current user

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,3 +9,8 @@
   <h1><%= link_to event.eventname, event_path(event) %> @ <%= event.location %>,</h1>
 
 <% end %>
+  <hr>
+  <h1>Here is a list of all the events created by you.</h1>
+<% current_user.events.each do |event| %>
+  <h1> <%= link_to event.eventname, event_path(event) %> @ <%= event.location %> </h1>
+<% end %>
