added event.finished to views and sanitized params

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -44,6 +44,9 @@
     <br><br>
 
   <% end %>
+  <%= f.label :finished %>
+  <%= f.check_box :finished %>
+  
   <br>
   <br>
   <%= f.submit "Submit" %>
