added AR scope method to event

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <hr>
-<h3>Here are all the current events:</h3>
+<h3>Here are events that are active:</h3>
 
 <% @events.each do |event| %>
 
