added comments to event show page

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,5 @@
 <% if @comment.event %>
-<h1>New Comment for <%= @comment.event%>!</h1>
+<h1>New Comment for <%= @comment.event.eventname%>!</h1>
 <% else %>
 <h1>New Comment!</h1>
 <% end %>
