--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,16 +1,6 @@
 <h1>Edit comment</h1>
 
-<% if @comment.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this from being saved:</h2>
-
-    <ul>
-    <% @comment.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
+<%= render "devise/shared/error_messages", resource: @comment %>
 
 <%= form_for([@comment.event,@comment]) do |f|%>
 
