--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,17 +1,5 @@
 
-<% if @event.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-    <ul>
-    <% @event.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
-
+<%= render "devise/shared/error_messages", resource: @event %>
 
 <% if user_signed_in? %>
   <p> Created by <%= current_user.username %>. </p>
@@ -46,7 +34,7 @@
   <% end %>
   <%= f.label :finished %>
   <%= f.check_box :finished %>
-  
+
   <br>
   <br>
   <%= f.submit "Submit" %>
