--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,20 +1,3 @@
 <h1>Edit comment</h1>
 
-<%= render "devise/shared/error_messages", resource: @comment %>
-
-<%= form_for([@comment.event,@comment]) do |f|%>
-
- <% if !@comment.event %>
-  <%= f.label :event %>
-  <%= f.collection_select :event_id, Event.all, :id, :eventname %>
-<% else %>
-    <%= f.hidden_field :event_id %>
-<% end %>
-
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-
-
-  <%= f.submit %>
-
-<% end %>
+<%= render 'form' %>
